--- a/ls/app/src/main/AndroidManifest.xml
+++ b/ls/app/src/main/AndroidManifest.xml
@@ -23,7 +23,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".AreaActivity"
+            android:name=".FullscreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_fullscreen"
+            android:theme="@style/FullscreenTheme" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -33,10 +44,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name=".AreaActivity"
             android:label="@string/title_activity_area"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+
     </application>
 
 </manifest>
